Refresh and start lineup acts on tomm's lineup instead of today

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -110,7 +110,7 @@ Switch to <%=(@pitch)?'Batters':'Pitchers'%>
 	<%end%>
 <%end%>
 <img src="/images/refresh.png" width="10" height="10" alt="Refresh Icon">
-<a href="javascript:refreshLineup()">Refresh</a>
+<a class="LeftNavLink" href="javascript:refreshLineup()">Refresh</a>
 </td>
 </tr>
 <tr>
