--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -10,7 +10,7 @@
   <%= label_tag(:pass, "Password:") %>
   <%= password_field_tag(:pass) %>
   <BR><BR>
-<input name="commit" src="/images/RSSignUp.png" type="image" value="Login"/>
+<input name="commit" src="/images/RSLogin.png" type="image" value="Login"/>
 <BR>
 
   <% flash.each do |name, msg| %>
