Dashboard page step by step text modification

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -9,7 +9,7 @@
 <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	<thead>
 		<tr>
-			<td colspan="3" class="DashHeaderTop" width="42%">
+			<td colspan="3" class="DashHeaderTop" width="40%">
 			Dashboard
 			<div class="DashHeaderTopBrown">Manage Accounts and Teams</div>
 			</td>
@@ -21,16 +21,18 @@
 		</tr>
 		<tr>
 			<td colspan="1" class="DashHeaderLeft">
-			Step 1: Add Accounts<br>
-			Step 2: Edit Team Preferences<br>
-			Step 3: Wait Until Morning<br>
-			Step 4: Review Lineup <br>
+			Step 1: Add Your Fantasy Sports Accounts<br>
+			Step 2: Set Batter and Pitcher Preferences<br>
+			Step 3: Start and Verify Tomorrow's Lineup<br>
+			Step 4: Sit Back and Relax<br>
+			Step 5: Review Lineup and Make Changes
 			</td>
 			<td colspan="4" class="DashHeaderRight">
 			1. Log into your Yahoo or ESPN account from RotoStarter<br>
-			2. Set each player to "Always" start, to "Never" start or to start "If Game"<br>
-			3. RotoStarter will set your lineups every morning using your preferences<br>
-			4. If you want, you can review your lineups and make changes<br>
+			2. For basic setup, set Batters to "If Game" & starting Pitchers to "If Probable"<br>
+			3. After saving prefs, test setting tomorrow's lineup by clicking "Start Tommorow"<br>
+			4. If satisfied, relax!  RotoStarter will set your daily lineup ONCE every morning<br>
+			5. You can safely modify your Yahoo or ESPN lineups for any last minute changes
 			</td>
 		</tr>
 		<tr>
